--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -604,6 +604,14 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Result Analysis:\n",
+    "From our understanding of the dataset the the x-axis consists of the different features in a dummied format and the y-axis"
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
