--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -18,8 +18,15 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Getting a feeling of the dataset"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -209,14 +216,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 57
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "source": [
     "df.head()"
    ],
@@ -425,14 +432,21 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 58
     }
    ],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Performing several plots to identify some good features:"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "source": [
     "edibility_habitat = df.groupby(['habitat','edibility']).size().unstack()\n",
     "edibility_habitat.plot.bar()"
@@ -446,7 +460,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 59
     },
     {
      "output_type": "display_data",
@@ -472,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "source": [
     "edibility_odor = df.groupby(['odor','edibility']).size().unstack()\n",
     "edibility_odor.plot.bar()"
@@ -486,7 +500,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 60
     },
     {
      "output_type": "display_data",
@@ -512,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "source": [
     "edibility_spore_print_color = df.groupby(['spore-print-color','edibility']).size().unstack()\n",
     "edibility_spore_print_color.plot.bar()"
@@ -526,7 +540,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 61
     },
     {
      "output_type": "display_data",
@@ -546,22 +560,255 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Then we convert the given categorical variables to dummy data"
+    "## Spore-print-color looks also looks like a good identifier.\n",
+    "## Then we convert the chosen features_data data to dummy data"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
+   "source": [
+    "chosen_features_dummy = pd.get_dummies(df[['edibility','habitat','odor','spore-print-color']])\n",
+    "chosen_features_dummy.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>edibility_e</th>\n",
+       "      <th>edibility_p</th>\n",
+       "      <th>habitat_d</th>\n",
+       "      <th>habitat_g</th>\n",
+       "      <th>habitat_l</th>\n",
+       "      <th>habitat_m</th>\n",
+       "      <th>habitat_p</th>\n",
+       "      <th>habitat_u</th>\n",
+       "      <th>habitat_w</th>\n",
+       "      <th>odor_a</th>\n",
+       "      <th>...</th>\n",
+       "      <th>odor_y</th>\n",
+       "      <th>spore-print-color_b</th>\n",
+       "      <th>spore-print-color_h</th>\n",
+       "      <th>spore-print-color_k</th>\n",
+       "      <th>spore-print-color_n</th>\n",
+       "      <th>spore-print-color_o</th>\n",
+       "      <th>spore-print-color_r</th>\n",
+       "      <th>spore-print-color_u</th>\n",
+       "      <th>spore-print-color_w</th>\n",
+       "      <th>spore-print-color_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   edibility_e  edibility_p  habitat_d  habitat_g  habitat_l  habitat_m  \\\n",
+       "0            0            1          0          0          0          0   \n",
+       "1            1            0          0          1          0          0   \n",
+       "2            1            0          0          0          0          1   \n",
+       "3            0            1          0          0          0          0   \n",
+       "4            1            0          0          1          0          0   \n",
+       "\n",
+       "   habitat_p  habitat_u  habitat_w  odor_a  ...  odor_y  spore-print-color_b  \\\n",
+       "0          0          1          0       0  ...       0                    0   \n",
+       "1          0          0          0       1  ...       0                    0   \n",
+       "2          0          0          0       0  ...       0                    0   \n",
+       "3          0          1          0       0  ...       0                    0   \n",
+       "4          0          0          0       0  ...       0                    0   \n",
+       "\n",
+       "   spore-print-color_h  spore-print-color_k  spore-print-color_n  \\\n",
+       "0                    0                    1                    0   \n",
+       "1                    0                    0                    1   \n",
+       "2                    0                    0                    1   \n",
+       "3                    0                    1                    0   \n",
+       "4                    0                    0                    1   \n",
+       "\n",
+       "   spore-print-color_o  spore-print-color_r  spore-print-color_u  \\\n",
+       "0                    0                    0                    0   \n",
+       "1                    0                    0                    0   \n",
+       "2                    0                    0                    0   \n",
+       "3                    0                    0                    0   \n",
+       "4                    0                    0                    0   \n",
+       "\n",
+       "   spore-print-color_w  spore-print-color_y  \n",
+       "0                    0                    0  \n",
+       "1                    0                    0  \n",
+       "2                    0                    0  \n",
+       "3                    0                    0  \n",
+       "4                    0                    0  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 62
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## We can see that the chosen features is converted to several colums where the each category is represented in binary\n",
+    "\n",
+    "# Complete dataset dummyfication with spyplot:"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "vectorizer = TfidfVectorizer()\n",
-    "chosen_features = df[['edibility','habitat','odor','spore-print-color']]\n",
     "dummied_features = pd.get_dummies(df)\n",
     "vectors = vectorizer.fit_transform(dummied_features)\n",
     "print('Shape:', vectors.shape)\n",
-    "print('Sparsity:',vectors.nnz / float(vectors.shape[0]*vectors.shape[1]) * 100.0)\n"
+    "print('Sparsity:',vectors.nnz / float(vectors.shape[0]*vectors.shape[1]) * 100.0)"
    ],
    "outputs": [
     {
@@ -577,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 64,
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -608,7 +855,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Result Analysis:\n",
+    "## Spyplot result analysis:\n",
     "From our understanding of the dataset the the x-axis consists of the different features in a dummied format and the y-axis"
    ],
    "metadata": {}
